// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ProfileCard should hide the settings icon 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer w-40 h-40 leading-tight m-2.5"
    data-testid="Card"
  >
    <div
      class="flex flex-col justify-center items-center mx-auto h-full"
    >
      <div
        class="relative"
      >
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
          data-testid="ProfileAvatar__image"
        >
          <img
            alt="John Doe"
            class="object-cover w-20 h-20 bg-center bg-no-repeat bg-cover rounded-full"
            src="avatarImage"
            title="John Doe"
          />
        </div>
      </div>
      <span
        class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
      >
        John Doe
      </span>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</div>
`;

exports[`ProfileCard should render 1`] = `
<DocumentFragment>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer w-40 h-40 leading-tight m-2.5"
    data-testid="Card"
  >
    <div
      class="flex flex-col justify-center items-center mx-auto h-full"
    >
      <div
        class="relative"
      >
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
          data-testid="ProfileAvatar__svg"
        >
          <img
            alt="John Doe"
            src="data:image/svg+xml;utf8,<svg version=\\"1.1\\" xmlns=\\"http://www.w3.org/2000/svg\\" class=\\"picasso\\" width=\\"100\\" height=\\"100\\" viewBox=\\"0 0 100 100\\"><style>.picasso circle{mix-blend-mode:soft-light;}</style><rect fill=\\"rgb(233, 30, 99)\\" width=\\"100\\" height=\\"100\\"/><circle r=\\"45\\" cx=\\"80\\" cy=\\"30\\" fill=\\"rgb(76, 175, 80)\\"/><circle r=\\"55\\" cx=\\"0\\" cy=\\"60\\" fill=\\"rgb(255, 152, 0)\\"/><circle r=\\"40\\" cx=\\"50\\" cy=\\"50\\" fill=\\"rgb(3, 169, 244)\\"/></svg>"
            title="John Doe"
          />
          <span
            class="absolute font-semibold text-white"
          >
            JO
          </span>
        </div>
      </div>
      <span
        class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
      >
        John Doe
      </span>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should render the profile with avatar image 1`] = `
<DocumentFragment>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer w-40 h-40 leading-tight m-2.5"
    data-testid="Card"
  >
    <div
      class="flex flex-col justify-center items-center mx-auto h-full"
    >
      <div
        class="relative"
      >
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
          data-testid="ProfileAvatar__image"
        >
          <img
            alt="John Doe"
            class="object-cover w-20 h-20 bg-center bg-no-repeat bg-cover rounded-full"
            src="avatarImage"
            title="John Doe"
          />
        </div>
      </div>
      <span
        class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
      >
        John Doe
      </span>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    />
  </div>
</DocumentFragment>
`;

exports[`ProfileCard should render the settings icon 1`] = `
<div>
  <div
    class="Cardstyles__Wrapper-sc-1uddqgb-0 eJQzer w-40 h-40 leading-tight m-2.5"
    data-testid="Card"
  >
    <div
      class="flex flex-col justify-center items-center mx-auto h-full"
    >
      <div
        class="relative"
      >
        <div
          class="Avatar__AvatarWrapper-sc-1vsy2s2-0 cPTwWa"
          data-testid="ProfileAvatar__image"
        >
          <img
            alt="John Doe"
            class="object-cover w-20 h-20 bg-center bg-no-repeat bg-cover rounded-full"
            src="avatarImage"
            title="John Doe"
          />
        </div>
      </div>
      <span
        class="mt-3 font-semibold text-theme-primary-text max-w-32 truncate"
      >
        John Doe
      </span>
    </div>
    <div
      class="flex absolute -top-1 -right-1 items-center m-4 space-x-1"
    >
      <div
        class="relative"
      >
        <span
          data-testid="dropdown__toggle"
        >
          <div
            class="flex overflow-hidden justify-center w-4"
          >
            <div
              class="sc-bdfBwQ fPrsah p-1 transition-colors duration-200 cursor-pointer text-theme-primary-300 dark:text-theme-secondary-600 hover:text-theme-danger-400"
              height="1em"
              width="1em"
            >
              <svg>
                settings.svg
              </svg>
            </div>
          </div>
        </span>
      </div>
    </div>
  </div>
</div>
`;
